--- a/2.circular-prograssbar/index.html
+++ b/2.circular-prograssbar/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
-  <div class="card">
+  <div class="card card-html">
     <div class="rating">
       <h2>
         <span class="counter" data-target="90">90</span>
@@ -16,38 +18,84 @@
         <br>
         HTML
       </h2>
-      <div class="block"></div>
+    </div>
+  </div>
+  <div class="card card-css">
+    <div class="rating">
+      <h2>
+        <span class="counter" data-target="40">40</span>
+        <sup>%</sup>
+        <br>
+        CSS
+      </h2>
+    </div>
+  </div>
+  <div class="card card-js">
+    <div class="rating">
+      <h2>
+        <span class="counter" data-target="70">70</span>
+        <sup>%</sup>
+        <br>
+        JavaScript
+      </h2>
     </div>
   </div>
   <script>
-    const rating = document.getElementsByClassName('rating')[0]
-    const block = document.getElementsByClassName('block')
-
-    for (let i = 0; i < 100; i++) {
-      rating.innerHTML += '<div class="block"></div>'
-      block[i].style.transform = "rotate(" + i * 3.6 + "deg)"
-      block[i].style.animationDelay = `${i/40}s`
-    }
-
-    const counter = document.querySelector('.counter')
-    counter.innerText = 0
-
-    // '+' before a string variable convert it to a number
-    const target = +counter.getAttribute('data-target')
-
-    // A function that counts numbers and updates the counter in the DOM until a target value is reached.
-    const NumberCounter = () => {
-      const value = +counter.innerText
-      console.log(value);
-      if (value<target){
-        counter.innerText = Math.ceil(value+1)
-        setTimeout(()=>{
-          NumberCounter()
-        },25)
+    const ratings = document.getElementsByClassName('rating')
+    let index = 0
+    for (const rating of ratings) {
+      for (let i = 0; i < 100; i++) {
+        rating.innerHTML += '<div class="block"></div>'
+        const block = document.getElementsByClassName('block')
+        block[i + index * 100].style.transform = "rotate(" + i * 3.6 + "deg)"
+        block[i + index * 100].style.animationDelay = `${i / 40}s`
       }
+
+      const counter = document.querySelectorAll('.counter')[index]
+      counter.innerText = 0
+
+      // '+' before a string variable convert it to a number
+      const target = +counter.getAttribute('data-target')
+
+      // Number Count Animation
+      const NumberCounter = () => {
+        const value = +counter.innerText
+        if (value < target) {
+          counter.innerText = Math.ceil(value + 1)
+          setTimeout(() => {
+            NumberCounter()
+          }, 25)
+        }
+      }
+
+      NumberCounter()
+
+      // Progress Bar Animation
+      const blocksAll = Array.from(document.querySelectorAll('.card .rating .block'))
+      const blocks = blocksAll.slice(index * 100, index * 100 + 100)
+      for (let i = 0; i < blocks.length; i++) {
+        if (i < target) {
+          switch (index) {
+            case 0:
+              blocks[i].classList.add('block-html')
+              break
+            case 1:
+              blocks[i].classList.add('block-css')
+              break
+            case 2:
+              blocks[i].classList.add('block-js')
+              break
+            default:
+              break
+          }
+        }
+      }
+
+
+      index++
     }
 
-    NumberCounter()
   </script>
 </body>
+
 </html>
