--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="./3.animation-effects/">Animation Effects</a></li>
     <li><a href="./4.glowing-border/">Glowing border</a></li>
     <li><a href="./5.scroll-magic/">Scroll Magic</a></li>
+    <li><a href="./6.click-magic/">Click Magic</a></li>
   </ol>
 </body>
 
